--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "agora-access-token": "^2.0.4",
     "axios": "^1.12.2",
+    "axios-cookiejar-support": "^6.0.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
@@ -28,6 +29,8 @@
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1"
+    ,
+    "tough-cookie": "^4.1.3"
   },
   "repository": {
     "type": "git",
