--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_DB_URL=mongodb+srv://rohitsangod74:rohitsaini23@cluster0.0sflzlu.mongodb.net/Agora-Calling-Collection
 MVC_BACKEND_PORT=5001
 SHOPIFY_API_SECRET =c29681750a54ed6a6f8f3a7d1eaa5f14
+PASSWORD_SECRECT_ROUNDING=10
