--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@shopify/shopify-api": "^12.1.1",
     "agora-access-token": "^2.0.4",
     "axios": "^1.12.2",
     "axios-cookiejar-support": "^6.0.2",
@@ -28,8 +29,7 @@
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
-    "socket.io": "^4.8.1"
-    ,
+    "socket.io": "^4.8.1",
     "tough-cookie": "^4.1.3"
   },
   "repository": {
