--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MONGO_DB_URL=mongodb+srv://rohitsangod74:rohitsaini23@cluster0.0sflzlu.mongodb.net/Agora-Calling-Collection
 MVC_BACKEND_PORT=5001
-SHOPIFY_API_SECRET =c29681750a54ed6a6f8f3a7d1eaa5f14
 PASSWORD_SECRECT_ROUNDING=10
+SHOPIFY_API_KEY=1844b97873b270b025334fd34790185c
+SHOPIFY_API_SECRET=85cce65962f7a73df3634b28a9aaa054
+SCOPES=read_products,write_products,read_customers,write_customers
