--- a/.env
+++ b/.env
@@ -3,3 +3,30 @@ MVC_BACKEND_PORT=5001
 PASSWORD_SECRECT_ROUNDING=10
 
 SCOPES=read_products,write_products,read_customers,write_customers
+
+HOST=127.0.0.1
+PORT=3333
+NODE_ENV=development
+APP_NAME=Node Label APP
+APP_URL=http://${HOST}:${PORT}
+CACHE_VIEWS=false
+APP_KEY=Vyo0LW6GS0bfJyWKAQX1ONbNhzWnz8hJ
+ 
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=adonis_label_app
+ 
+SESSION_DRIVER=cookie
+HASH_DRIVER=bcrypt
+SHOPIFY_CLIENT_ID=1844b97873b270b025334fd34790185c
+SHOPIFY_API_SECRET=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
+
+REDIRECT_URI=http://localhost:5001/app/callback
+TRIAL_DAYS=7
+API_VERSION=2025-10
+APP_VERSION=1.0
+client_id=569d15bd4d003d0ff174b2fdcfa8c59b
+
