--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
 APP_NAME=Node Label APP
-APP_URL=http://${HOST}:${PORT}
+APP_URL=https://test-consultant-backend.onrender.com
 CACHE_VIEWS=false
 APP_KEY=Vyo0LW6GS0bfJyWKAQX1ONbNhzWnz8hJ
  
