add push notification ??

--- a/.env
+++ b/.env
@@ -30,4 +30,5 @@ API_VERSION=2025-10
 APP_VERSION=1.0
 client_id=569d15bd4d003d0ff174b2fdcfa8c59b
 STOREFRONT_PASSWORD=1
+FIREBASE_SERVICE_ACCOUNT='{"type":"service_account","project_id":"consultant-app-24ceb",...}'
 
