impliment vocie call  genrate toke code

--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ client_id=569d15bd4d003d0ff174b2fdcfa8c59b
 STOREFRONT_PASSWORD=1
 FIREBASE_SERVICE_ACCOUNT='{"type":"service_account","project_id":"consultant-app-24ceb",...}'
 
+
+# agora crediencial 
+AGORA_APP_ID=656422a01e774a4ba5b2dc0ac12e5fe5
+AGORA_APP_CERTIFICATE=26765718c2ac409fa976d35d5b99d212
