--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
