--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@shopify/shopify-api": "^12.3.0",
     "agora-access-token": "^2.0.4",
     "axios": "^1.12.2",
     "axios-cookiejar-support": "^6.0.2",
