--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -18,7 +18,14 @@ redirect_urls = [
 [webhooks]
 api_version = "2025-10"
 
+[[webhooks.subscriptions]]
+topics = [
 
+  "orders/create",
+  "orders/paid",
+]
+uri = "https://test-online-consultation.zend-apps.com/api/webhooks/shop/webhooks"
+ 
 
 [[webhooks.subscriptions]]
 compliance_topics = ["customers/data_request", "customers/redact", "shop/redact"]
