--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "validator": "^13.15.26"
   },
   "repository": {
     "type": "git",
