--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,9 +1,9 @@
 # App Info
-name = "vc-consultant app"
-client_id = "1844b97873b270b025334fd34790185c"
+name = "consultant-26"
+client_id = "411de928361e3994ad0b06bbce7a944b"
 application_url = "https://test-consultation-app.zend-apps.com " # backend URL
 embedded = true
-handle = "label-node"
+handle = "label-node01"
 
 [access_scopes]
 scopes = "read_customers,write_customers,write_draft_orders,read_orders,write_orders"
